# compression

./: .gitignore  pyproject.toml
src/: convert.py  dataset.py
src/codec/intercodec/: model.py  test.py  train.py
src/codec/intracodec/: model.py  test.py  train.py
src/codec/raft/: model.py  train.py
