[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "compression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "compressai>=1.2.8",
    "open3d>=0.19.0",
    "pysdf>=0.1.9",
    "scikit-image>=0.25.2",
    "torch==2.4.1",
    "torchac>=0.9.3",
    "torchvision==0.19.1",
    "tqdm>=4.67.1",
    "trimesh>=4.10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
