[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "compression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "compressai[dev]>=1.2.8",
    "numpy<2",
    "open3d>=0.19.0",
    "pysdf>=0.1.9",
    "scikit-image>=0.25.2",
    "torch<2.5.1",
    "torchac>=0.9.3",
    "tqdm>=4.67.1",
    "trimesh>=4.10.0",
    "unfoldnd>=0.2.3",
    "pytorch3d==0.7.8+5043d15pt2.5.0cu124",
    "kaolin==0.18.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.setuptools.packages.find]
where = ["src"]


[tool.uv.sources]
pytorch3d = { index = "pytorch3d-custom" }

[[tool.uv.index]]
name = "pytorch3d-custom"
url = "https://miropsota.github.io/torch_packages_builder"
explicit = true

[tool.uv]
find-links = [
    "https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-2.5.0_cu124.html"
]
